# oledgf-clone

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  Dockerfile  Makefile  ProjectOptions.cmake  README.md  files.cpp  files.hpp  linalg.hpp  main.cpp  massert.hpp  material.cpp  material.hpp  solver.cpp  testdoc  theory.md
cmake/: CPM.cmake  CompilerWarnings.cmake  EnableSIMD.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
examples/: CMakeLists.txt  test_barnes.cpp  test_fitting.cpp
examples/data/: 3ML.txt  3ML_processed.txt  6ML.txt  6ML_processed.txt  process.py  setfos_simple_emitter_isotropic.txt  setfos_simple_emitter_substrate_emission_horizontal.txt  setfos_simple_emitter_substrate_emission_vertical.txt  setfos_simple_spectrum_isotropic.txt
examples/main/: CMakeLists.txt  main.cpp
examples/tests/: CMakeLists.txt  run.sh  simple_emitter.json  simple_emitter_with_spectrum.json  simple_emitter_with_spectrum_and_dipole_dist.json  simple_emitter_with_spectrum_material_from_file.json  test_barnes.cpp  test_config.cpp  test_fitting.cpp
include/: basesolver.hpp  configuration.hpp  data.hpp  files.hpp  fitting.hpp  forwardDecl.hpp  layer.hpp  linalg.hpp  massert.hpp  material.hpp  matplotlib.hpp  matrix.hpp  simulation.hpp  solver.hpp
mat/: Al_Cent.csv  Al_Cent.txt  CBP.csv  ITO.csv  ITO.txt  PEDOT_BaytronP_AL4083.csv  PEDOT_BaytronP_AL4083.txt  air.nk  dummy_nk.nk  glass.nk
src/: CMakeLists.txt  basesolver.cpp  configuration.cpp  data.cpp  files.cpp  fitting.cpp  layer.cpp  main.cpp  material.cpp  simulation.cpp  solver.cpp
